Added cognitive scores for benchmarking

--- a/code/get_train_test.ipynb
+++ b/code/get_train_test.ipynb
@@ -106,6 +106,8 @@
     "demog = pd.read_csv(os.path.join(os.environ['DERIVSDIR'], 'pncDataFreeze20170905/n1601_dataFreeze/demographics/n1601_demographics_go1_20161212.csv'))\n",
     "# Brain volume\n",
     "brain_vol = pd.read_csv(os.path.join(os.environ['DERIVSDIR'], 'pncDataFreeze20170905/n1601_dataFreeze/neuroimaging/t1struct/n1601_ctVol20170412.csv'))\n",
+    "# cnb\n",
+    "cnb = pd.read_csv(os.path.join(os.environ['DERIVSDIR'], 'pncDataFreeze20170905/n1601_dataFreeze/cnb/n1601_cnb_factor_scores_tymoore_20151006.csv'))\n",
     "\n",
     "# GOASSESS Bifactor scores\n",
     "goassess = pd.read_csv('/Users/lindenmp/Dropbox/Work/ResData/PNC/GO1_clinical_factor_scores_psychosis_split_BIFACTOR.csv')\n",
@@ -119,6 +121,7 @@
     "df = pd.merge(df, demog, on=['scanid', 'bblid']) # demog\n",
     "df = pd.merge(df, goassess, on=['bblid']) # goassess\n",
     "df = pd.merge(df, brain_vol, on=['scanid', 'bblid']) # brain_vol\n",
+    "df = pd.merge(df, cnb, on=['scanid', 'bblid']) # brain_vol\n",
     "\n",
     "print(df.shape[0])\n",
     "df.set_index(['bblid', 'scanid'], inplace = True)"
@@ -162,16 +165,16 @@
        "      <th>squeakycleanExclude</th>\n",
        "      <th>psychoactiveMedMedical</th>\n",
        "      <th>...</th>\n",
-       "      <th>AnxiousMisery</th>\n",
-       "      <th>Externalizing</th>\n",
-       "      <th>Fear</th>\n",
-       "      <th>mprage_antsCT_vol_CSF</th>\n",
-       "      <th>mprage_antsCT_vol_GrayMatter</th>\n",
-       "      <th>mprage_antsCT_vol_WhiteMatter</th>\n",
-       "      <th>mprage_antsCT_vol_DeepGrayMatter</th>\n",
-       "      <th>mprage_antsCT_vol_BrainStem</th>\n",
-       "      <th>mprage_antsCT_vol_Cerebellum</th>\n",
-       "      <th>mprage_antsCT_vol_TBV</th>\n",
+       "      <th>F1_Exec_Comp_Cog_Accuracy_Ar</th>\n",
+       "      <th>F2_Social_Cog_Accuracy_Ar</th>\n",
+       "      <th>F3_Memory_Accuracy_Ar</th>\n",
+       "      <th>F1_Social_Cognition_Efficiency_Ar</th>\n",
+       "      <th>F2_Complex_Reasoning_Efficiency_Ar</th>\n",
+       "      <th>F3_Memory_Efficiency_Ar</th>\n",
+       "      <th>F4_Executive_Efficiency_Ar</th>\n",
+       "      <th>F1_Slow_Speed_Ar</th>\n",
+       "      <th>F2_Memory_Speed_Ar</th>\n",
+       "      <th>F3_Fast_Speed_Ar</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>bblid</th>\n",
@@ -214,16 +217,16 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-0.737588</td>\n",
-       "      <td>0.845164</td>\n",
-       "      <td>-2.437746</td>\n",
-       "      <td>251420.729266</td>\n",
-       "      <td>616556.953530</td>\n",
-       "      <td>389490.709524</td>\n",
-       "      <td>52141.098450</td>\n",
-       "      <td>17099.116230</td>\n",
-       "      <td>140667.147488</td>\n",
-       "      <td>1.467376e+06</td>\n",
+       "      <td>-1.147680</td>\n",
+       "      <td>-0.985732</td>\n",
+       "      <td>0.103675</td>\n",
+       "      <td>-0.248342</td>\n",
+       "      <td>-1.500726</td>\n",
+       "      <td>0.749361</td>\n",
+       "      <td>0.276936</td>\n",
+       "      <td>0.012737</td>\n",
+       "      <td>0.673015</td>\n",
+       "      <td>0.927039</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>80199</th>\n",
@@ -239,16 +242,16 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-0.883597</td>\n",
-       "      <td>0.130829</td>\n",
-       "      <td>0.742890</td>\n",
-       "      <td>273991.914252</td>\n",
-       "      <td>642746.594518</td>\n",
-       "      <td>447142.548594</td>\n",
-       "      <td>56126.058254</td>\n",
-       "      <td>19814.056864</td>\n",
-       "      <td>150808.843822</td>\n",
-       "      <td>1.590630e+06</td>\n",
+       "      <td>-0.262102</td>\n",
+       "      <td>0.951817</td>\n",
+       "      <td>-0.729813</td>\n",
+       "      <td>1.309180</td>\n",
+       "      <td>0.323467</td>\n",
+       "      <td>-0.216490</td>\n",
+       "      <td>-0.439120</td>\n",
+       "      <td>0.882288</td>\n",
+       "      <td>0.621913</td>\n",
+       "      <td>-0.233789</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>80179</th>\n",
@@ -264,16 +267,16 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.037908</td>\n",
-       "      <td>0.622578</td>\n",
-       "      <td>0.950200</td>\n",
-       "      <td>234354.132558</td>\n",
-       "      <td>524247.214162</td>\n",
-       "      <td>360616.889612</td>\n",
-       "      <td>38010.047782</td>\n",
-       "      <td>16670.210102</td>\n",
-       "      <td>136221.640940</td>\n",
-       "      <td>1.310120e+06</td>\n",
+       "      <td>-2.456514</td>\n",
+       "      <td>-3.463454</td>\n",
+       "      <td>-2.023924</td>\n",
+       "      <td>-2.082903</td>\n",
+       "      <td>-0.919736</td>\n",
+       "      <td>-0.722441</td>\n",
+       "      <td>-1.598467</td>\n",
+       "      <td>1.000161</td>\n",
+       "      <td>0.009006</td>\n",
+       "      <td>-0.118194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>81005</th>\n",
@@ -289,16 +292,16 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.373101</td>\n",
-       "      <td>1.358093</td>\n",
-       "      <td>0.982293</td>\n",
-       "      <td>284533.512816</td>\n",
-       "      <td>607386.448326</td>\n",
-       "      <td>361763.861942</td>\n",
-       "      <td>46560.045350</td>\n",
-       "      <td>16218.452418</td>\n",
-       "      <td>138964.706566</td>\n",
-       "      <td>1.455427e+06</td>\n",
+       "      <td>1.164884</td>\n",
+       "      <td>1.348419</td>\n",
+       "      <td>0.936387</td>\n",
+       "      <td>0.899698</td>\n",
+       "      <td>1.231159</td>\n",
+       "      <td>1.485604</td>\n",
+       "      <td>0.195561</td>\n",
+       "      <td>-0.180368</td>\n",
+       "      <td>1.025021</td>\n",
+       "      <td>0.518658</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>80812</th>\n",
@@ -314,20 +317,20 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.261131</td>\n",
-       "      <td>-1.500084</td>\n",
-       "      <td>1.584978</td>\n",
-       "      <td>254232.349560</td>\n",
-       "      <td>605785.081594</td>\n",
-       "      <td>471565.588522</td>\n",
-       "      <td>46874.693698</td>\n",
-       "      <td>20525.091818</td>\n",
-       "      <td>141902.010418</td>\n",
-       "      <td>1.540885e+06</td>\n",
+       "      <td>0.454563</td>\n",
+       "      <td>0.892760</td>\n",
+       "      <td>0.400804</td>\n",
+       "      <td>1.000376</td>\n",
+       "      <td>1.442359</td>\n",
+       "      <td>0.554244</td>\n",
+       "      <td>0.390312</td>\n",
+       "      <td>0.891195</td>\n",
+       "      <td>0.657851</td>\n",
+       "      <td>0.582442</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 175 columns</p>\n",
+       "<p>5 rows × 201 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -355,47 +358,55 @@
        "81005 2644                         1                1             1   \n",
        "80812 2646                         0                0             0   \n",
        "\n",
-       "              squeakycleanExclude  psychoactiveMedMedical  ...  AnxiousMisery  \\\n",
-       "bblid scanid                                               ...                  \n",
-       "80961 2632                      1                       0  ...      -0.737588   \n",
-       "80199 2637                      0                       0  ...      -0.883597   \n",
-       "80179 2643                      1                       0  ...       1.037908   \n",
-       "81005 2644                      1                       0  ...       0.373101   \n",
-       "80812 2646                      1                       0  ...       0.261131   \n",
+       "              squeakycleanExclude  psychoactiveMedMedical  ...  \\\n",
+       "bblid scanid                                               ...   \n",
+       "80961 2632                      1                       0  ...   \n",
+       "80199 2637                      0                       0  ...   \n",
+       "80179 2643                      1                       0  ...   \n",
+       "81005 2644                      1                       0  ...   \n",
+       "80812 2646                      1                       0  ...   \n",
        "\n",
-       "              Externalizing      Fear  mprage_antsCT_vol_CSF  \\\n",
-       "bblid scanid                                                   \n",
-       "80961 2632         0.845164 -2.437746          251420.729266   \n",
-       "80199 2637         0.130829  0.742890          273991.914252   \n",
-       "80179 2643         0.622578  0.950200          234354.132558   \n",
-       "81005 2644         1.358093  0.982293          284533.512816   \n",
-       "80812 2646        -1.500084  1.584978          254232.349560   \n",
+       "              F1_Exec_Comp_Cog_Accuracy_Ar  F2_Social_Cog_Accuracy_Ar  \\\n",
+       "bblid scanid                                                            \n",
+       "80961 2632                       -1.147680                  -0.985732   \n",
+       "80199 2637                       -0.262102                   0.951817   \n",
+       "80179 2643                       -2.456514                  -3.463454   \n",
+       "81005 2644                        1.164884                   1.348419   \n",
+       "80812 2646                        0.454563                   0.892760   \n",
        "\n",
-       "              mprage_antsCT_vol_GrayMatter  mprage_antsCT_vol_WhiteMatter  \\\n",
+       "              F3_Memory_Accuracy_Ar  F1_Social_Cognition_Efficiency_Ar  \\\n",
+       "bblid scanid                                                             \n",
+       "80961 2632                 0.103675                          -0.248342   \n",
+       "80199 2637                -0.729813                           1.309180   \n",
+       "80179 2643                -2.023924                          -2.082903   \n",
+       "81005 2644                 0.936387                           0.899698   \n",
+       "80812 2646                 0.400804                           1.000376   \n",
+       "\n",
+       "              F2_Complex_Reasoning_Efficiency_Ar  F3_Memory_Efficiency_Ar  \\\n",
        "bblid scanid                                                                \n",
-       "80961 2632                   616556.953530                  389490.709524   \n",
-       "80199 2637                   642746.594518                  447142.548594   \n",
-       "80179 2643                   524247.214162                  360616.889612   \n",
-       "81005 2644                   607386.448326                  361763.861942   \n",
-       "80812 2646                   605785.081594                  471565.588522   \n",
+       "80961 2632                             -1.500726                 0.749361   \n",
+       "80199 2637                              0.323467                -0.216490   \n",
+       "80179 2643                             -0.919736                -0.722441   \n",
+       "81005 2644                              1.231159                 1.485604   \n",
+       "80812 2646                              1.442359                 0.554244   \n",
        "\n",
-       "              mprage_antsCT_vol_DeepGrayMatter  mprage_antsCT_vol_BrainStem  \\\n",
-       "bblid scanid                                                                  \n",
-       "80961 2632                        52141.098450                 17099.116230   \n",
-       "80199 2637                        56126.058254                 19814.056864   \n",
-       "80179 2643                        38010.047782                 16670.210102   \n",
-       "81005 2644                        46560.045350                 16218.452418   \n",
-       "80812 2646                        46874.693698                 20525.091818   \n",
+       "              F4_Executive_Efficiency_Ar  F1_Slow_Speed_Ar  \\\n",
+       "bblid scanid                                                 \n",
+       "80961 2632                      0.276936          0.012737   \n",
+       "80199 2637                     -0.439120          0.882288   \n",
+       "80179 2643                     -1.598467          1.000161   \n",
+       "81005 2644                      0.195561         -0.180368   \n",
+       "80812 2646                      0.390312          0.891195   \n",
        "\n",
-       "              mprage_antsCT_vol_Cerebellum  mprage_antsCT_vol_TBV  \n",
-       "bblid scanid                                                       \n",
-       "80961 2632                   140667.147488           1.467376e+06  \n",
-       "80199 2637                   150808.843822           1.590630e+06  \n",
-       "80179 2643                   136221.640940           1.310120e+06  \n",
-       "81005 2644                   138964.706566           1.455427e+06  \n",
-       "80812 2646                   141902.010418           1.540885e+06  \n",
+       "              F2_Memory_Speed_Ar  F3_Fast_Speed_Ar  \n",
+       "bblid scanid                                        \n",
+       "80961 2632              0.673015          0.927039  \n",
+       "80199 2637              0.621913         -0.233789  \n",
+       "80179 2643              0.009006         -0.118194  \n",
+       "81005 2644              1.025021          0.518658  \n",
+       "80812 2646              0.657851          0.582442  \n",
        "\n",
-       "[5 rows x 175 columns]"
+       "[5 rows x 201 columns]"
       ]
      },
      "execution_count": 6,
@@ -591,7 +602,19 @@
    "source": [
     "header = [train_test_str, 'ageAtScan1', 'ageAtScan1_Years','sex','race2','handednessv2',\n",
     "          'dti64MeanAbsRMS','dti64MeanRelRMS','dti64MaxAbsRMS','dti64MaxRelRMS','mprage_antsCT_vol_TBV', 'averageManualRating',\n",
-    "          'Overall_Psychopathology','Psychosis_Positive','Psychosis_NegativeDisorg','AnxiousMisery','Externalizing','Fear']\n",
+    "          'Overall_Psychopathology','Psychosis_Positive','Psychosis_NegativeDisorg','AnxiousMisery','Externalizing','Fear',\n",
+    "            'Overall_Efficiency', 'Overall_Accuracy',\n",
+    "           'Overall_Speed', 'F1_Exec_Comp_Res_Accuracy', 'F2_Social_Cog_Accuracy',\n",
+    "           'F3_Memory_Accuracy', 'F1_Complex_Reasoning_Efficiency',\n",
+    "           'F2_Memory.Efficiency', 'F3_Executive_Efficiency',\n",
+    "           'F4_Social_Cognition_Efficiency', 'F1_Slow_Speed', 'F2_Fast_Speed',\n",
+    "           'F3_Memory_Speed', 'Overall_Efficiency_Ar', 'Overall_Accuracy_Ar',\n",
+    "           'Overall_Speed_Ar', 'F1_Exec_Comp_Cog_Accuracy_Ar',\n",
+    "           'F2_Social_Cog_Accuracy_Ar', 'F3_Memory_Accuracy_Ar',\n",
+    "           'F1_Social_Cognition_Efficiency_Ar',\n",
+    "           'F2_Complex_Reasoning_Efficiency_Ar', 'F3_Memory_Efficiency_Ar',\n",
+    "           'F4_Executive_Efficiency_Ar', 'F1_Slow_Speed_Ar', 'F2_Memory_Speed_Ar',\n",
+    "           'F3_Fast_Speed_Ar']\n",
     "df.to_csv(os.path.join(os.environ['TRTEDIR'], 'df_pheno.csv'), columns = header)"
    ]
   },
