--- a/code/compute_node_metrics.ipynb
+++ b/code/compute_node_metrics.ipynb
@@ -9,15 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Essentials\n",
     "import os, sys, glob\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import nibabel as nib\n",
     "import scipy.io as sio\n",
-    "import nibabel as nib"
+    "\n",
+    "# Stats\n",
+    "import scipy as sp\n",
+    "from scipy import stats\n",
+    "import statsmodels.api as sm\n",
+    "import pingouin as pg\n",
+    "\n",
+    "# Plotting\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.rcParams['svg.fonttype'] = 'none'"
    ]
   },
   {
@@ -26,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/code/func/')\n",
+    "sys.path.append('/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/code/func/')\n",
     "from proj_environment import set_proj_env\n",
     "from func import node_strength, ave_control, modal_control"
    ]
@@ -39,10 +51,7 @@
    "source": [
     "train_test_str = 'squeakycleanExclude'\n",
     "exclude_str = 't1Exclude'\n",
-    "parc_str = 'schaefer'\n",
-    "parc_scale = 200\n",
-    "parcel_names, parcel_loc, drop_parcels, num_parcels, yeo_idx, yeo_labels = set_proj_env(train_test_str = train_test_str, exclude_str = exclude_str,\n",
-    "                                                                            parc_str = parc_str, parc_scale = parc_scale)"
+    "parcel_names, parcel_loc, drop_parcels, num_parcels, yeo_idx, yeo_labels = set_proj_env(exclude_str = exclude_str, train_test_str = train_test_str)"
    ]
   },
   {
@@ -61,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_200_streamlineCount\n"
+      "/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount\n"
      ]
     }
    ],
@@ -85,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude'"
+       "'/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis/normative/t1Exclude/squeakycleanExclude'"
       ]
      },
      "execution_count": 5,
@@ -123,9 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Missing data file for this subject only for schaefer 200\n",
-    "if parc_str == 'schaefer' and parc_scale == 200:\n",
-    "    df.drop(labels = (112598, 5161), inplace=True)"
+    "# # Missing data file for this subject only for schaefer 200\n",
+    "# if parc_str == 'schaefer' and parc_scale == 200:\n",
+    "#     df.drop(labels = (112598, 5161), inplace=True)"
    ]
   },
   {
@@ -137,19 +146,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1099, 1001)\n"
+      "(1100, 1601)\n"
      ]
     }
    ],
    "source": [
     "# output dataframe\n",
-    "ct_labels = ['ct_' + str(i) for i in range(num_parcels)]\n",
     "vol_labels = ['vol_' + str(i) for i in range(num_parcels)]\n",
     "str_labels = ['str_' + str(i) for i in range(num_parcels)]\n",
     "ac_labels = ['ac_' + str(i) for i in range(num_parcels)]\n",
     "mc_labels = ['mc_' + str(i) for i in range(num_parcels)]\n",
     "\n",
-    "df_node = pd.DataFrame(index = df.index, columns = ct_labels + vol_labels + str_labels + ac_labels + mc_labels)\n",
+    "df_node = pd.DataFrame(index = df.index, columns = vol_labels + str_labels + ac_labels + mc_labels)\n",
     "df_node.insert(0, train_test_str, df[train_test_str])\n",
     "\n",
     "print(df_node.shape)"
@@ -159,40 +167,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in cortical thickness and volume"
+    "## Load in cortical volume"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/Users/lindenmp/Dropbox/Work/ResData/PNC/processedData/antsCorticalThickness/81287/20100114x2738/ct_schaefer200_17.txt']\n"
-     ]
-    }
-   ],
-   "source": [
-    "CT = np.zeros((df.shape[0], num_parcels))\n",
-    "\n",
-    "for (i, (index, row)) in enumerate(df.iterrows()):\n",
-    "    file_name = os.environ['CT_NAME_TMP'].replace(\"bblid\", str(index[0]))\n",
-    "    file_name = file_name.replace(\"scanid\", str(index[1]))\n",
-    "    full_path = glob.glob(os.path.join(os.environ['CTDIR'], file_name))\n",
-    "    if i == 0: print(full_path)    \n",
-    "\n",
-    "    ct = np.loadtxt(full_path[0])\n",
-    "    CT[i,:] = ct\n",
-    "    \n",
-    "df_node.loc[:,ct_labels] = CT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,14 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/lindenmp/Dropbox/Work/ResData/PNC/processedData/gm_vol_masks_native/81287/20100114x2738/Schaefer2018_200_17Networks_native_gm.nii.gz']\n"
+      "['/Volumes/ResProjects_2TB/ResData/PNC/processedData/gm_vol_masks_native/81287/20100114x2738/Schaefer2018_400_17Networks_native_gm.nii.gz']\n",
+      "(80265, 3145). Warning: not all parcels present\n"
      ]
     }
    ],
@@ -222,14 +203,17 @@
     "    full_path = glob.glob(os.path.join(os.environ['VOLDIR'], file_name))\n",
     "    if i == 0: print(full_path)    \n",
     "    \n",
-    "    img = nib.load(full_path[0])\n",
-    "    v = np.array(img.dataobj)\n",
-    "    v = v[v != 0]\n",
-    "    unique_elements, counts_elements = np.unique(v, return_counts=True)\n",
-    "    if len(unique_elements) == num_parcels:\n",
-    "        VOL[i,:] = counts_elements\n",
-    "    else:\n",
-    "        print(str(index) + '. Warning: not all parcels present')\n",
+    "    if len(full_path) > 0:\n",
+    "        img = nib.load(full_path[0])\n",
+    "        v = np.array(img.dataobj)\n",
+    "        v = v[v != 0]\n",
+    "        unique_elements, counts_elements = np.unique(v, return_counts=True)\n",
+    "        if len(unique_elements) == num_parcels:\n",
+    "            VOL[i,:] = counts_elements\n",
+    "        else:\n",
+    "            print(str(index) + '. Warning: not all parcels present')\n",
+    "            subj_filt[i] = True\n",
+    "    elif len(full_path) == 0:\n",
     "        subj_filt[i] = True\n",
     "    \n",
     "df_node.loc[:,vol_labels] = VOL"
@@ -237,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,10 +240,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if any(subj_filt):\n",
+    "    df = df.loc[~subj_filt]\n",
+    "    df_node = df_node.loc[~subj_filt]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in connectivity matrices and compute node metrics"
+    "## Load in structural connectivity matrices"
    ]
   },
   {
@@ -281,61 +276,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/lindenmp/Dropbox/Work/ResData/PNC/processedData/diffusion/deterministic_20171118/81287/20100114x2738/tractography/connectivity/81287_20100114x2738_SchaeferPNC_200_dti_streamlineCount_connectivity.mat']\n",
-      "82051/*x2856/tractography/connectivity/82051_*x2856_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "87804/*x3144/tractography/connectivity/87804_*x3144_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "91332/*x3362/tractography/connectivity/91332_*x3362_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "87990/*x3676/tractography/connectivity/87990_*x3676_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "103737/*x3964/tractography/connectivity/103737_*x3964_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "87470/*x4000/tractography/connectivity/87470_*x4000_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "104161/*x4104/tractography/connectivity/104161_*x4104_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "103768/*x4499/tractography/connectivity/103768_*x4499_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "113216/*x4506/tractography/connectivity/113216_*x4506_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "90050/*x4746/tractography/connectivity/90050_*x4746_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "115276/*x5012/tractography/connectivity/115276_*x5012_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "116618/*x5274/tractography/connectivity/116618_*x5274_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "127128/*x5545/tractography/connectivity/127128_*x5545_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "112802/*x6401/tractography/connectivity/112802_*x6401_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "85397/*x6643/tractography/connectivity/85397_*x6643_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "83632/*x6818/tractography/connectivity/83632_*x6818_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "81533/*x6869/tractography/connectivity/81533_*x6869_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "91025/*x6881/tractography/connectivity/91025_*x6881_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
-      "105272/*x8238/tractography/connectivity/105272_*x8238_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n"
+      "['/Volumes/ResProjects_2TB/ResData/PNC/processedData/diffusion/deterministic_20171118/81287/20100114x2738/tractography/connectivity/81287_20100114x2738_SchaeferPNC_400_dti_streamlineCount_connectivity.mat']\n"
      ]
     }
    ],
    "source": [
-    "# fc stored as 3d matrix, subjects of 3rd dim\n",
     "A = np.zeros((num_parcels, num_parcels, df.shape[0]))\n",
-    "S = np.zeros((df.shape[0], num_parcels))\n",
-    "AC = np.zeros((df.shape[0], num_parcels))\n",
-    "MC = np.zeros((df.shape[0], num_parcels))\n",
-    "\n",
     "for (i, (index, row)) in enumerate(df.iterrows()):\n",
-    "    if parc_str == 'schaefer':\n",
-    "        file_name = os.environ['SC_NAME_TMP'].replace(\"scanid\", str(index[1]))\n",
-    "        file_name = file_name.replace(\"bblid\", str(index[0]))\n",
-    "        full_path = glob.glob(os.path.join(os.environ['SCDIR'], file_name))\n",
-    "        if i == 0: print(full_path)\n",
-    "        if len(full_path) > 0:\n",
-    "            mat_contents = sio.loadmat(full_path[0])\n",
-    "            a = mat_contents[os.environ['CONN_STR']]\n",
-    "\n",
-    "            A[:,:,i] = a\n",
-    "            S[i,:] = node_strength(a)\n",
-    "            AC[i,:] = ave_control(a)\n",
-    "            MC[i,:] = modal_control(a)\n",
-    "        elif len(full_path) == 0:\n",
-    "            print(file_name + ': NOT FOUND')\n",
-    "            subj_filt[i] = True\n",
-    "            A[:,:,i] = np.full((num_parcels, num_parcels), np.nan)\n",
-    "            S[i,:] = np.full(num_parcels, np.nan)\n",
-    "            AC[i,:] = np.full(num_parcels, np.nan)\n",
-    "            MC[i,:] = np.full(num_parcels, np.nan)     \n",
-    "\n",
-    "df_node.loc[:,str_labels] = S\n",
-    "df_node.loc[:,ac_labels] = AC\n",
-    "df_node.loc[:,mc_labels] = MC"
+    "    file_name = os.environ['SC_NAME_TMP'].replace(\"scanid\", str(index[1]))\n",
+    "    file_name = file_name.replace(\"bblid\", str(index[0]))\n",
+    "    full_path = glob.glob(os.path.join(os.environ['SCDIR'], file_name))\n",
+    "    if i == 0: print(full_path)\n",
+    "    if len(full_path) > 0:\n",
+    "        mat_contents = sio.loadmat(full_path[0])\n",
+    "        a = mat_contents[os.environ['CONN_STR']]\n",
+    "        A[:,:,i] = a\n",
+    "    elif len(full_path) == 0:\n",
+    "        print(file_name + ': NOT FOUND')\n",
+    "        subj_filt[i] = True\n",
+    "        A[:,:,i] = np.full((num_parcels, num_parcels), np.nan)"
    ]
   },
   {
@@ -346,7 +305,7 @@
     {
      "data": {
       "text/plain": [
-       "19"
+       "0"
       ]
      },
      "execution_count": 15,
@@ -367,7 +326,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1080, 1001)\n"
+      "(1099, 1601)\n"
      ]
     }
    ],
@@ -415,7 +374,7 @@
     {
      "data": {
       "text/plain": [
-       "12"
+       "68"
       ]
      },
      "execution_count": 19,
@@ -436,7 +395,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1068, 1001)\n"
+      "(1031, 1601)\n"
      ]
     }
    ],
@@ -464,11 +423,70 @@
     "A_c = np.zeros((A.shape[2],))\n",
     "A_d = np.zeros((A.shape[2],))\n",
     "for i in range(A.shape[2]):\n",
-    "    a = A[:,:,i]\n",
-    "    A_c[i] = np.sum(np.triu(a))\n",
-    "    A_d[i] = np.count_nonzero(np.triu(a))/((a.shape[0]**2-a.shape[0])/2)\n",
+    "    A_c[i] = np.sum(np.triu(A[:,:,i]))\n",
+    "    A_d[i] = np.count_nonzero(np.triu(A[:,:,i]))/((A[:,:,i].shape[0]**2-A[:,:,i].shape[0])/2)\n",
     "df.loc[:,'streamline_count'] = A_c\n",
     "df.loc[:,'network_density'] = A_d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalize A by regional volume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vol_ref = os.path.join(os.environ['DERIVSDIR'], 'Schaefer2018_400_17Networks_PNC_2mm.nii.gz'))\n",
+    "img = nib.load(vol_ref)\n",
+    "v = np.array(img.dataobj)\n",
+    "v = v[v != 0]\n",
+    "unique_elements, counts_elements = np.unique(v, return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(num_parcels):\n",
+    "    for j in range(num_parcels):\n",
+    "        denom = counts_elements[i] + counts_elements[j]\n",
+    "        A[i,j,:] = A[i,j,:]/denom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute node metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fc stored as 3d matrix, subjects of 3rd dim\n",
+    "S = np.zeros((df.shape[0], num_parcels))\n",
+    "AC = np.zeros((df.shape[0], num_parcels))\n",
+    "MC = np.zeros((df.shape[0], num_parcels))\n",
+    "\n",
+    "for (i, (index, row)) in enumerate(df.iterrows()):\n",
+    "    S[i,:] = node_strength(A[:,:,i])\n",
+    "    AC[i,:] = ave_control(A[:,:,i])\n",
+    "    MC[i,:] = modal_control(A[:,:,i])\n",
+    "\n",
+    "df_node.loc[:,str_labels] = S\n",
+    "df_node.loc[:,ac_labels] = AC\n",
+    "df_node.loc[:,mc_labels] = MC"
    ]
   },
   {
@@ -480,16 +498,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_200_streamlineCount'"
+       "'/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
