New dataset, no nuisance regression

--- a/code/compute_node_metrics.ipynb
+++ b/code/compute_node_metrics.ipynb
@@ -50,14 +50,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_test_str = 'squeakycleanExclude'\n",
     "exclude_str = 't1Exclude'\n",
-    "extra_str = '_consist' # '_vol_norm' '_noboxcox'\n",
+    "extra_str = '' # '_vol_norm' '_noboxcox' '_consist'\n",
     "edge_weight = 'streamlineCount' # 'streamlineCount' 'fa' 'mean_streamlineLength' 'adc'\n",
     "parc_scale = 200\n",
-    "primary_covariate = 'ageAtScan1_Years'\n",
-    "parcel_names, parcel_loc, drop_parcels, num_parcels, yeo_idx, yeo_labels = set_proj_env(exclude_str = exclude_str, train_test_str = train_test_str,\n",
-    "                                                                                        parc_scale = parc_scale, primary_covariate = primary_covariate,\n",
+    "parcel_names, parcel_loc, drop_parcels, num_parcels, yeo_idx, yeo_labels = set_proj_env(exclude_str = exclude_str,\n",
+    "                                                                                        parc_scale = parc_scale,\n",
     "                                                                                       extra_str = extra_str, edge_weight = edge_weight)"
    ]
   },
@@ -77,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis_cubic_test/normative/t1Exclude/squeakycleanExclude/schaefer_200_streamlineCount_consist\n"
+      "/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis/t1Exclude/schaefer_200_streamlineCount\n"
      ]
     }
    ],
@@ -118,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis_cubic_test/normative/t1Exclude/squeakycleanExclude'"
+       "'/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis/t1Exclude'"
       ]
      },
      "execution_count": 6,
@@ -139,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1100, 44)\n"
+      "(1100, 43)\n"
      ]
     }
    ],
@@ -170,7 +168,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1099, 801)\n"
+      "(1099, 800)\n"
      ]
     }
    ],
@@ -182,7 +180,7 @@
     "mc_labels = ['mc_' + str(i) for i in range(num_parcels)]\n",
     "\n",
     "df_node = pd.DataFrame(index = df.index, columns = vol_labels + str_labels + ac_labels + mc_labels)\n",
-    "df_node.insert(0, train_test_str, df[train_test_str])\n",
+    "# df_node.insert(0, 'nuisance_sample', df['nuisance_sample'])\n",
     "\n",
     "print(df_node.shape)"
    ]
@@ -368,7 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1080, 801)\n"
+      "(1080, 800)\n"
      ]
     }
    ],
@@ -489,7 +487,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1062, 801)\n"
+      "(1062, 800)\n"
      ]
     }
    ],
@@ -623,7 +621,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis_cubic_test/normative/t1Exclude/squeakycleanExclude/schaefer_200_streamlineCount_consist'"
+       "'/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis/t1Exclude/schaefer_200_streamlineCount'"
       ]
      },
      "execution_count": 28,
