Added basic export of predict pheno

--- a/code/normalize_node_metrics.ipynb
+++ b/code/normalize_node_metrics.ipynb
@@ -668,6 +668,57 @@
     "df_node.to_csv(os.path.join(os.environ['MODELDIR'], 'df_node_normalized.csv'))\n",
     "# df_node.to_csv(os.path.join(os.environ['MODELDIR'], 'df_node_normalized_my_thresh-'+str(my_thresh)+'.csv'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export for prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phenos = ['Overall_Psychopathology','Psychosis_Positive','Psychosis_NegativeDisorg','AnxiousMisery','Externalizing','Fear']\n",
+    "# phenos = ['Overall_Psychopathology','Psychosis_Positive','Psychosis_NegativeDisorg','AnxiousMisery','Externalizing','Fear',\n",
+    "#          'F1_Exec_Comp_Res_Accuracy', 'F2_Social_Cog_Accuracy', 'F3_Memory_Accuracy', 'F1_Complex_Reasoning_Efficiency',\n",
+    "#           'F2_Memory.Efficiency', 'F3_Executive_Efficiency', 'F4_Social_Cognition_Efficiency']\n",
+    "# phenos = ['F1_Exec_Comp_Res_Accuracy', 'F2_Social_Cog_Accuracy', 'F3_Memory_Accuracy', 'F1_Complex_Reasoning_Efficiency',\n",
+    "#           'F2_Memory.Efficiency', 'F3_Executive_Efficiency', 'F4_Social_Cognition_Efficiency']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis/t1Exclude/schaefer_200_streamlineCount/predict_pheno\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create subdirectory for specific normative model -- labeled according to parcellation/resolution choices and covariates\n",
+    "outdir = os.path.join(os.environ['MODELDIR'], 'predict_pheno')\n",
+    "print(outdir)\n",
+    "if not os.path.exists(outdir): os.mkdir(outdir);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_node.to_csv(os.path.join(outdir, 'X.csv'))\n",
+    "df.loc[:,phenos].to_csv(os.path.join(outdir, 'y.csv'))"
+   ]
   }
  ],
  "metadata": {
