--- a/code/prediction/get_sample.ipynb
+++ b/code/prediction/get_sample.ipynb
@@ -546,7 +546,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "header = ['ageAtScan1', 'ageAtScan1_Years','sex','race2','handednessv2',\n",
+    "header = ['ageAtScan1', 'ageAtScan1_Years','sex','race2','handednessv2', 'restProtocolValidationStatus', 'restExclude',\n",
     "          'dti64MeanAbsRMS','dti64MeanRelRMS','dti64MaxAbsRMS','dti64MaxRelRMS','mprage_antsCT_vol_TBV', 'averageManualRating',\n",
     "          'Overall_Psychopathology','Psychosis_Positive','Psychosis_NegativeDisorg','AnxiousMisery','Externalizing','Fear',\n",
     "            'Overall_Efficiency', 'Overall_Accuracy',\n",
@@ -703,6 +703,42 @@
     "ax.set_ylabel('Psychopathology phenotypes')\n",
     "ax.set_xlabel('Phenotype score')\n",
     "f.savefig('phenos_distributions.svg', dpi = 300, bbox_inches = 'tight', pad_inches = 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export sample for FC gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N after rs-fMRI exclusion: 926\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4) rs-fMRI exclusion\n",
+    "df = df[df['restProtocolValidationStatus'] == 1]\n",
+    "df = df[df['restExclude'] == 0]\n",
+    "print('N after rs-fMRI exclusion:', df.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(os.path.join(os.environ['TRTEDIR'], 'df_gradients.csv'), columns = header)"
    ]
   }
  ],
