--- a/code/prediction/get_sample.ipynb
+++ b/code/prediction/get_sample.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Preamble"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -18,6 +11,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import nibabel as nib\n",
+    "import scipy.io as sio\n",
     "\n",
     "# Stats\n",
     "import scipy as sp\n",
