Added int_norm and ave control as a function of c

--- a/code/prediction/compute_node_metrics.ipynb
+++ b/code/prediction/compute_node_metrics.ipynb
@@ -29,12 +29,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lindenmp/opt/anaconda3/envs/neurodev_cs_predictive/lib/python3.7/site-packages/outdated/utils.py:18: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.3.3, the latest is 0.3.4.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  **kwargs\n"
+     ]
+    }
+   ],
    "source": [
     "sys.path.append('/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/code/func/')\n",
     "from proj_environment import set_proj_env\n",
     "sys.path.append('/Users/lindenmp/Dropbox/Work/git/pyfunc/')\n",
-    "from func import node_strength, ave_control, modal_control, consistency_thresh"
+    "from func import node_strength, ave_control, modal_control, consistency_thresh, rank_int"
    ]
   },
   {
@@ -68,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis/t1Exclude/schaefer_200_streamlineCount_consist\n"
+      "/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis_int/t1Exclude/schaefer_200_streamlineCount_consist\n"
      ]
     }
    ],
@@ -109,7 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis/t1Exclude'"
+       "'/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis_int/t1Exclude'"
       ]
      },
      "execution_count": 6,
@@ -130,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1100, 45)\n"
+      "(1100, 26)\n"
      ]
     }
    ],
@@ -573,27 +583,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save out"
+    "## Recalculate average control at different C params"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_node.isna().any().any()"
+    "c_params = np.array([10, 100, 1000, 10000, 20000])"
    ]
   },
   {
@@ -602,12 +601,73 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "100\n",
+      "1000\n",
+      "10000\n",
+      "20000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# output dataframe\n",
+    "df_node_ac_overc = pd.DataFrame(index = df.index)\n",
+    "\n",
+    "for c in c_params:\n",
+    "    print(c)\n",
+    "    ac_labels_new = ['ac_c' + str(c) + '_' + str(i) for i in range(num_parcels)]\n",
+    "    df_node_ac_temp = pd.DataFrame(index = df.index, columns = ac_labels_new)\n",
+    "    \n",
+    "    # fc stored as 3d matrix, subjects of 3rd dim\n",
+    "    AC = np.zeros((df.shape[0], num_parcels))\n",
+    "    for (i, (index, row)) in enumerate(df.iterrows()):\n",
+    "        AC[i,:] = ave_control(A_out[:,:,i], c = c)\n",
+    "\n",
+    "    df_node_ac_temp.loc[:,ac_labels_new] = AC\n",
+    "    df_node_ac_overc = pd.concat((df_node_ac_overc, df_node_ac_temp), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save out raw data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_node.isna().any().any())\n",
+    "print(df_node_ac_overc.isna().any().any())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "'/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis/t1Exclude/schaefer_200_streamlineCount_consist'"
+       "'/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis_int/t1Exclude/schaefer_200_streamlineCount_consist'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,14 +678,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save out\n",
     "np.save(os.path.join(os.environ['MODELDIR'], 'A'), A)\n",
     "np.save(os.path.join(os.environ['MODELDIR'], 'A_out'), A_out)\n",
+    "\n",
     "df_node.to_csv(os.path.join(os.environ['MODELDIR'], 'df_node_base.csv'))\n",
+    "df_node_ac_overc.to_csv(os.path.join(os.environ['MODELDIR'], 'df_node_ac_overc_base.csv'))\n",
+    "\n",
     "df.to_csv(os.path.join(os.environ['MODELDIR'], 'df_pheno.csv'))"
    ]
   },
@@ -633,33 +696,141 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Export for prediction"
+    "# Export for prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Normalize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Covariates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenos = ['Overall_Psychopathology','Psychosis_Positive','Psychosis_NegativeDisorg','AnxiousMisery','Externalizing','Fear']\n",
-    "# phenos = ['Overall_Psychopathology','Psychosis_Positive','Psychosis_NegativeDisorg','AnxiousMisery','Externalizing','Fear',\n",
-    "#          'F1_Exec_Comp_Res_Accuracy', 'F2_Social_Cog_Accuracy', 'F3_Memory_Accuracy', 'F1_Complex_Reasoning_Efficiency',\n",
-    "#           'F2_Memory.Efficiency', 'F3_Executive_Efficiency', 'F4_Social_Cognition_Efficiency']\n",
-    "# phenos = ['F1_Exec_Comp_Res_Accuracy', 'F2_Social_Cog_Accuracy', 'F3_Memory_Accuracy', 'F1_Complex_Reasoning_Efficiency',\n",
-    "#           'F2_Memory.Efficiency', 'F3_Executive_Efficiency', 'F4_Social_Cognition_Efficiency']"
+    "covs = ['ageAtScan1', 'mprage_antsCT_vol_TBV', 'dti64MeanRelRMS', 'network_density', 'streamline_count']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis/t1Exclude/schaefer_200_streamlineCount_consist/predict_pheno\n"
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "rank_r = np.zeros(len(covs),)\n",
+    "\n",
+    "for i, cov in enumerate(covs):\n",
+    "    x = rank_int(df.loc[:,cov])\n",
+    "    rank_r[i] = sp.stats.spearmanr(df.loc[:,cov],x)[0]\n",
+    "    df.loc[:,cov] = x\n",
+    "\n",
+    "print(np.sum(rank_r < 0.99))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Node features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "rank_r = np.zeros(df_node.shape[1],)\n",
+    "\n",
+    "for i, col in enumerate(df_node.columns):\n",
+    "    x = rank_int(df_node.loc[:,col])\n",
+    "    rank_r[i] = sp.stats.spearmanr(df_node.loc[:,col],x)[0]\n",
+    "    df_node.loc[:,col] = x\n",
+    "\n",
+    "print(np.sum(rank_r < .99))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "rank_r = np.zeros(df_node_ac_overc.shape[1],)\n",
+    "\n",
+    "for i, col in enumerate(df_node_ac_overc.columns):\n",
+    "    x = rank_int(df_node_ac_overc.loc[:,col])\n",
+    "    rank_r[i] = sp.stats.spearmanr(df_node_ac_overc.loc[:,col],x)[0]\n",
+    "    df_node_ac_overc.loc[:,col] = x\n",
+    "\n",
+    "print(np.sum(rank_r < .99))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Overall_Psychopathology', 'Psychosis_Positive', 'Psychosis_NegativeDisorg', 'AnxiousMisery', 'Externalizing', 'Fear']\n"
+     ]
+    }
+   ],
+   "source": [
+    "covs = ['ageAtScan1', 'sex', 'mprage_antsCT_vol_TBV', 'dti64MeanRelRMS']\n",
+    "phenos = ['Overall_Psychopathology','Psychosis_Positive','Psychosis_NegativeDisorg','AnxiousMisery','Externalizing','Fear']\n",
+    "# phenos = [s + '_norm' for s in phenos]\n",
+    "print(phenos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/lindenmp/Dropbox/Work/ResProjects/neurodev_cs_predictive/analysis_int/t1Exclude/schaefer_200_streamlineCount_consist/predict_pheno\n"
      ]
     }
    ],
@@ -672,12 +843,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_node.to_csv(os.path.join(outdir, 'X.csv'))\n",
-    "df.loc[:,phenos].to_csv(os.path.join(outdir, 'y.csv'))"
+    "df_node_ac_overc.to_csv(os.path.join(outdir, 'X_ac_c.csv'))\n",
+    "df.loc[:,phenos].to_csv(os.path.join(outdir, 'y.csv'))\n",
+    "df.loc[:,covs].to_csv(os.path.join(outdir, 'c.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covs = ['ageAtScan1', 'sex', 'mprage_antsCT_vol_TBV', 'dti64MeanRelRMS', 'streamline_count']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[:,covs].to_csv(os.path.join(outdir, 'c_sc.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# phenos = ['F1_Exec_Comp_Res_Accuracy', 'F2_Social_Cog_Accuracy', 'F3_Memory_Accuracy', 'F1_Complex_Reasoning_Efficiency',\n",
+    "#           'F2_Memory.Efficiency', 'F3_Executive_Efficiency', 'F4_Social_Cognition_Efficiency']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Create subdirectory for specific normative model -- labeled according to parcellation/resolution choices and covariates\n",
+    "# outdir = os.path.join(os.environ['MODELDIR'], 'predict_cog')\n",
+    "# print(outdir)\n",
+    "# if not os.path.exists(outdir): os.mkdir(outdir);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_node.to_csv(os.path.join(outdir, 'X.csv'))\n",
+    "# df.loc[:,phenos].to_csv(os.path.join(outdir, 'y.csv'))\n",
+    "# df.loc[:,covs].to_csv(os.path.join(outdir, 'c.csv'))"
    ]
   }
  ],
