Figure saved to .png for space

--- a/1_code/0_get_sample.ipynb
+++ b/1_code/0_get_sample.ipynb
@@ -751,7 +751,7 @@
     "axes[1].set_xticks([0,0.5])\n",
     "axes[1].set_xticklabels(['Male', 'Female'])\n",
     "\n",
-    "f.savefig('age_distributions.svg', dpi = 300, bbox_inches = 'tight', pad_inches = 0)"
+    "f.savefig('age_distributions.png', dpi = 300, bbox_inches = 'tight', pad_inches = 0)"
    ]
   },
   {
@@ -788,7 +788,7 @@
     "ax.set_yticklabels(phenos_label_short)\n",
     "ax.set_ylabel('Psychopathology dimension')\n",
     "ax.set_xlabel('Score')\n",
-    "f.savefig('symptoms_distributions.svg', dpi = 300, bbox_inches = 'tight', pad_inches = 0)"
+    "f.savefig('symptoms_distributions.png', dpi = 300, bbox_inches = 'tight', pad_inches = 0)"
    ]
   },
   {
