--- a/1_code/1_compute_node_features.ipynb
+++ b/1_code/1_compute_node_features.ipynb
@@ -531,10 +531,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.save(os.path.join(storedir, 'A'), A)\n",
+    "\n",
     "df_node.to_csv(os.path.join(storedir, 'df_node_base.csv'))\n",
     "df_node_ac_overc.to_csv(os.path.join(storedir, 'df_node_ac_overc_base.csv'))\n",
     "df.to_csv(os.path.join(storedir, 'df.csv'))"
